# codex-voice

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  TODO_ISSUES.md  deny.toml  mise.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
crates/codex-voice-app/: AGENTS.md  Cargo.toml  tauri.conf.json
crates/codex-voice-app/icons/: icon.icns
crates/codex-voice-app/src/: app.rs  cli.rs  doctor.rs  hud.rs  logging.rs  main.rs  status.rs  transcriber.rs  tray.rs  tts.rs  windows.rs
crates/codex-voice-app/tauri-frontend/: index.html
crates/codex-voice-audio/: AGENTS.md  Cargo.toml
crates/codex-voice-audio/src/: lib.rs  recorder.rs  sample.rs  state.rs  wav.rs
crates/codex-voice-codex/: AGENTS.md  Cargo.toml
crates/codex-voice-codex/src/: auth.rs  client.rs  lib.rs
crates/codex-voice-core/: AGENTS.md  Cargo.toml
crates/codex-voice-core/src/: audio.rs  engine.rs  fs.rs  lib.rs  platform.rs  redaction.rs  speech.rs  transcription.rs
crates/codex-voice-platform/: AGENTS.md  Cargo.toml
crates/codex-voice-platform/src/: lib.rs  linux.rs  linux_clipboard.rs  linux_portal_identity.rs  linux_remote_desktop.rs  linux_token_store.rs  macos.rs  windows.rs
crates/codex-voice-transcriber/: AGENTS.md  Cargo.toml  build.rs
crates/codex-voice-transcriber/assets/web/: app.html  sw.js
crates/codex-voice-transcriber/src/: chunking.rs  client.rs  discovery.rs  lib.rs  server.rs  test_support.rs  upload.rs
crates/codex-voice-transcriber/src/server/: intents.rs  mod.rs  speech.rs  tests.rs  transcribe.rs  web.rs  web_assets.rs
crates/codex-voice-tts/: AGENTS.md  Cargo.toml
crates/codex-voice-tts/src/: client.rs  codex_llm.rs  config.rs  convert.rs  elevenlabs.rs  google.rs  lib.rs  provider.rs  provider_timeout.rs  sanitize.rs  secret.rs  speech_prep.rs
crates/codex-voice-tts/src/config/: mod.rs  models.rs  provider.rs  serde.rs
crates/codex-voice-tts/src/speech_prep/: mod.rs  prompts.rs  shorten.rs  tag_repair.rs
crates/codex-voice-ui/: AGENTS.md  Cargo.toml
crates/codex-voice-ui/src/: lib.rs  linux_tray.rs  linux_windows.rs  macos_tray.rs  tray_common.rs  windows_tray.rs
docs/: codex-voice-config.example.json  execplan-rust-native-cross-platform.md  execplan-rust-native-cross-platform.md.ARCHIVED  read-aloud-defaults.example.json
packaging/: codex-voice-wrapper.sh
packaging/applications/: com.heliasar.CodexVoice.desktop
packaging/systemd/user/: codex-voice-server.service  codex-voice.service
packaging/windows/: SMOKE.md  build-dist.ps1
plans/: 001-ci-verification-gates.md  002-codex-auth-refresh-timeout.md  003-harden-auth-json-io.md  004-engine-and-client-test-gaps.md  005-responsive-event-loop.md  006-split-server-rs.md  007-web-shell-caching.md  008-concurrent-chunk-transcription.md  009-concurrent-tts-synthesis.md  010-fix-quadratic-split.md  011-tts-provider-trait.md  012-dedupe-tray-implementations.md  013-consolidate-main-run.md  014-typed-errors.md  015-docs-accuracy.md  016-dependency-hygiene.md  017-minor-robustness.md  018-mise-worktree-verify.md  023-ksni-iced-tray-migration.md  README.md
scripts/: tts_prep_benchmark.py
web/: .oxlintrc.json  PERFORMANCE.md  README.md  index.html  package.json  tsconfig.json  vite.config.test.ts  vite.config.ts  vitest.config.ts
web/public/: manifest-light.webmanifest  manifest.webmanifest
web/scripts/: check-bundle-size.mjs
web/src/: App.test.tsx  App.tsx  format.ts  index.css  main.tsx  pwa.test.ts  pwa.ts  test-setup.ts  waveform-controller.ts
web/src/components/: GenerateBar.test.tsx  GenerateBar.tsx  SettingsPanel.tsx  TextEditor.tsx  UpdateToast.test.tsx  UpdateToast.tsx  WaveformPlayer.tsx
web/src/hooks/: useGeneration.ts  useLatest.ts  usePersistedText.ts  usePlayback.test.tsx  usePlayback.ts  useSeekGestures.ts  useServerConfig.ts  useSettings.test.tsx  useSettings.ts  useVisualViewport.ts  useWaveform.ts
web/src/lib/: appMode.test.ts  appMode.ts  config.test.ts  config.ts  generation.test.ts  generation.ts  index.ts  personas.test.ts  personas.ts  settings.test.ts  settings.ts  storage.test.ts  storage.ts  theme.test.ts  theme.ts  util.ts
web/src/lib/audio/: pcm.test.ts  pcm.ts  streaming.test.ts  streaming.ts  wav.test.ts  wav.ts  waveform.test.ts  waveform.ts
web/src/lib/prep/: codex.test.ts  codex.ts  decision.test.ts  decision.ts  index.ts  prepare.test.ts  prepare.ts  prompts.test.ts  prompts.ts  tags.test.ts  tags.ts  types.ts
web/src/lib/synth/: chunking.test.ts  chunking.ts  common.ts  elevenlabs.test.ts  elevenlabs.ts  google.test.ts  google.ts  pool.test.ts  pool.ts  serverJobs.test.ts  serverJobs.ts  timeout.test.ts  timeout.ts
webtests/: .gitignore  README.md  package.json  playwright.config.ts
webtests/tests/: appmode.spec.ts  behavior.spec.ts  enrichment-review.spec.ts  live.spec.ts  web.spec.ts
