[workspace]
members = [
    "crates/codex-voice-app",
    "crates/codex-voice-audio",
    "crates/codex-voice-codex",
    "crates/codex-voice-core",
    "crates/codex-voice-platform",
    "crates/codex-voice-tts",
    "crates/codex-voice-transcriber",
    "crates/codex-voice-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
arboard = "3.4.1"
ashpd = { version = "0.13.10", default-features = false, features = ["tokio", "global_shortcuts", "remote_desktop", "screencast"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.37", features = ["derive"] }
cpal = "0.15.3"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
enumflags2 = "0.7.12"
futures-util = "0.3.31"
hex = "0.4.3"
hound = "3.5.1"
rand = "0.9.4"
reqwest = { version = "0.12.15", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tray-icon = { version = "0.22.1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader"] }
global-hotkey = "0.6.0"
