[package]
name = "codex-voice-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
codex-voice-audio = { path = "../codex-voice-audio" }
codex-voice-codex = { path = "../codex-voice-codex" }
codex-voice-core = { path = "../codex-voice-core" }
codex-voice-platform = { path = "../codex-voice-platform" }
codex-voice-tts = { path = "../codex-voice-tts" }
codex-voice-ui = { path = "../codex-voice-ui" }
dirs.workspace = true
hex.workspace = true
hound.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true

[[bin]]
name = "codex-voice"
path = "src/main.rs"
