[package]
name = "codex-voice-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
codex-voice-audio = { path = "../codex-voice-audio" }
codex-voice-codex = { path = "../codex-voice-codex" }
codex-voice-core = { path = "../codex-voice-core" }
codex-voice-platform = { path = "../codex-voice-platform" }
codex-voice-tts = { path = "../codex-voice-tts" }
codex-voice-transcriber = { path = "../codex-voice-transcriber" }
dirs.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "codex-voice"
path = "src/main.rs"
