[package]
name = "codex-voice-audio"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
codex-voice-core = { path = "../codex-voice-core" }
cpal.workspace = true
crossbeam-channel.workspace = true
hound.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
