[package]
name = "codex-voice-codex"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
codex-voice-core = { path = "../codex-voice-core" }
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
hound.workspace = true
tempfile.workspace = true
