[package]
name = "codex-voice-platform"
version.workspace = true
edition.workspace = true

[dependencies]
arboard.workspace = true
ashpd.workspace = true
async-trait.workspace = true
codex-voice-core = { path = "../codex-voice-core" }
enumflags2.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
