[package]
name = "codex-voice-platform"
version.workspace = true
edition.workspace = true

[dependencies]
arboard.workspace = true
async-trait.workspace = true
codex-voice-core = { path = "../codex-voice-core" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
enumflags2.workspace = true
futures-util.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
