[package]
name = "codex-voice-transcriber"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
codex-voice-codex = { path = "../codex-voice-codex" }
codex-voice-core = { path = "../codex-voice-core" }
codex-voice-tts = { path = "../codex-voice-tts" }
dirs.workspace = true
futures-util.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
