[package]
name = "codex-voice-tts"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
codex-voice-core = { path = "../codex-voice-core" }
dirs.workspace = true
futures-util.workspace = true
hound.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
