[package]
name = "codex-voice-ui"
version.workspace = true
edition.workspace = true

[dependencies]
codex-voice-core = { path = "../codex-voice-core" }
tray-icon.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
