[package]
name = "codex-voice-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-voice-core = { path = "../codex-voice-core" }
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"
iced = { version = "0.14", default-features = false, features = [
    "tokio",
    "tiny-skia",
    "x11",
    "wayland",
    "linux-theme-detection",
    "fira-sans",
] }
tokio = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
